# src/controllers/payment/GetPaymentsSummaryController.ts
@@ -1,4 +1,8 @@
 import { Controller, Get, Query, Route, Tags } from 'tsoa';
+import {
+  PaymentCurrency,
+  PaymentStatus,
+} from '../../entities/Payment';
 import { PaymentFilters } from '../../gateway/Payment';
 import {
   GetPaymentsSummaryInteractor,
@@ -10,10 +14,18 @@ import {
 export class GetPaymentsSummaryController extends Controller {
   @Get('summary')
   public async getPaymentsSummary(
-    @Query() course?: string
+    @Query() status?: PaymentStatus,
+    @Query() currency?: PaymentCurrency,
+    @Query() course?: string,
+    @Query() name?: string,
+    @Query() email?: string,
   ): Promise<PaymentsSummaryResponse> {
     const paymentFilters: PaymentFilters = {
+      status,
+      currency,
       course,
+      name,
+      email,
     };
 
     return GetPaymentsSummaryInteractor(paymentFilters);
